--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,5 +17,5 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-
+<app-atmo-test></app-atmo-test>
 <router-outlet></router-outlet>
