--- a/src/app/ma-region/ma-region.component.html
+++ b/src/app/ma-region/ma-region.component.html
@@ -1,3 +1,7 @@
-<p>
-  ma-region works!
-</p>
+<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+  <div class="card-header">Ma région</div>
+  <div class="card-body">
+    <h5 class="card-title">La qualité de l'air dans ma région</h5>
+    <p class="card-text">{{ messageRegion}}</p>
+  </div>
+</div>
