--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,3 +1,6 @@
-<p>
-  search-bar works!
-</p>
+
+<form class="form-inline my-2 my-lg-0">
+<!--  Je ne retrouve pas la value du formulaire, mettre en place ng form-->
+  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" value="{{inputNameComnune}}">
+  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="searchCommune(inputNameComnune)">Search</button>
+</form>
