--- a/src/app/components/ma-region/ma-region.component.html
+++ b/src/app/components/ma-region/ma-region.component.html
@@ -1,7 +1,5 @@
-<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-  <div class="card-header">Ma région</div>
-  <div class="card-body">
-    <h5 class="card-title">La qualité de l'air dans ma région</h5>
-    <p class="card-text">{{ messageRegion}}</p>
-  </div>
-</div>
+<mat-card>
+  <mat-card-title>Ma région</mat-card-title>
+  <mat-card-subtitle>La qualité de l'air dans ma région</mat-card-subtitle>
+  <mat-card-content>{{ messageRegion}}</mat-card-content>
+</mat-card>
