--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -4,27 +4,28 @@
   <!-- <input class="" type="search" placeholder="Search" aria-label="Search" value="{{}}">
   <button class="" type="submit" (click)="searchCommune()">Search</button>
 </form> -->
-<!-- 
-  <mat-form-field class="example-full-width">
-    <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-        {{option}}
-      </mat-option>
-    </mat-autocomplete>
-    <button class="" type="submit" (click)="searchCommune()">Search</button>
-  </mat-form-field> -->
 
-  <div class="example-container">
-    <form #form="ngForm" (submit)="searchCommune(form)" class="example-container">
-      <mat-form-field class="example-full-width">
-        <input matInput placeholder="Ecriver votre commune" name="nameComnune" #nameComnune="ngModel" [(ngModel)]="service.formData.NameCommuneSearch" required>
-      </mat-form-field>
-      <button mat-flat-button color="warn">Rechercher</button>  
-    </form>
-  </div>
+  <div id="search-component">
+    <input #searchBox id="search-box" matInput placeholder="Ecriver votre commune"
+      (input)="searchCommune(searchBox.value)" required>
+    <ul class="search-result">
       <li *ngFor="let region of listregions">
-          {{region.commune}}
+        <a (click)="test(region.code_insee)">{{region.commune}}</a>
       </li>
+    </ul>
+  </div>
+      <!-- <li *ngFor="let region of listregions">
+          {{region.commune}}
+      </li> -->
 
+      <!-- <input matInput placeholder="Ecriver votre commune" name="nameComnune" #nameComnune="ngModel" [(ngModel)]="service.formData.NameCommuneSearch" required> -->
 
+      <!-- <mat-form-field>
+        <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      </mat-form-field>
+
+      <mat-autocomplete>
+        <mat-option *ngFor="let region of listregions" [value]="region.code_insee">
+          {{ region.commune }}
+        </mat-option>
+      </mat-autocomplete> -->
