reque sur vigilence en indice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-search-bar></app-search-bar>
 
-<app-atmo-test></app-atmo-test>
-
-<app-ma-region></app-ma-region>
+<div>
+    <app-atmo-now></app-atmo-now>
+    <app-ma-region></app-ma-region> 
+</div>
 
 <!--<router-outlet></router-outlet>-->
