--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,42 +1,10 @@
 
-<!-- <form class="">
-<!--  Je ne retrouve pas la value du formulaire, mettre en place ng form-->
-  <!-- <input class="" type="search" placeholder="Search" aria-label="Search" value="{{}}">
-  <button class="" type="submit" (click)="searchCommune()">Search</button>
-</form> -->
-
   <div id="search-component">
     <input #searchBox id="search-box" matInput placeholder="Ecriver votre commune"
       (input)="searchCommune(searchBox.value)" required>
     <ul class="search-result">
       <li *ngFor="let region of listregions">
-        <a (click)="GetIndiceCommune(region.code_insee)">{{region.commune}}</a>
+        <a (click)="test(region.code_insee)">{{region.commune}}</a>
       </li>
     </ul>
   </div>
-
-<!-- <mat-form-field id="search-component">
-  <input #searchBox id="search-box" matInput placeholder="Ecriver votre commune"
-    (input)="searchCommune(searchBox.value)" required>
-  <mat-autocomplete class="search-result">
-    <mat-option *ngFor="let region of listregions">
-      {{region}}
-    </mat-option>
-  </mat-autocomplete>
-</mat-form-field> -->
-
-      <!-- <li *ngFor="let region of listregions">
-          {{region.commune}}
-      </li> -->
-
-      <!-- <input matInput placeholder="Ecriver votre commune" name="nameComnune" #nameComnune="ngModel" [(ngModel)]="service.formData.NameCommuneSearch" required> -->
-
-      <!-- <mat-form-field>
-        <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-      </mat-form-field>
-
-      <mat-autocomplete>
-        <mat-option *ngFor="let region of listregions" [value]="region.code_insee">
-          {{ region.commune }}
-        </mat-option>
-      </mat-autocomplete> -->
