--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -16,11 +16,7 @@
       <p>{{indicesCommune.qualificatif}}</p>
       <p>{{indicesCommune.valeur | number:'1.0-0'}} </p>
     </div>
-
-    <h4>Recomandations :</h4>
-    <div>
-      <p>Conseil</p>
-    </div>
+    <p>{{vigilanceCommune}} </p>
   </div>
   <div class="indiceRegion">
     <app-ma-region></app-ma-region>
