--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -32,6 +32,10 @@
   height: 20px;
 }
 
+#search-component{
+  display: flex;
+  justify-content: center;
+}
 
 ul.search-result {
   margin-top: 0;
@@ -45,15 +49,23 @@ ul.search-result {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  p {
+    margin: 0;
+    padding: 0;
+  }
  }
-
 
  .container {
    display: flex;
+
  }
 
  .indiceCommune {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
  }
 
  .indiceRegion {
